[package]
name = "cloud-vm"
version = "0.1.6"
edition = "2021"
authors = ["Rekas <aure369@gmail.com>"]
description = "EVM-based compression system with nestable operations and version tracking"
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
semver = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "compression_benchmark"
harness = false
